syntax = "proto3";

package models;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "error.proto";

message CellCapacity {
  int32 memory_mb = 1;
  int32 disk_mb = 2;
  int32 containers = 3;
}

message CellPresence {
  string cell_id = 1;
  string rep_address = 2;
  string zone = 3;
  CellCapacity capacity = 4;
  repeated Provider rootfs_providers = 5 [(gogoproto.jsontag) = "rootfs_provider_list,omitempty"];
  repeated string placement_tags = 6 [(gogoproto.jsontag) = "placement_tags,omitempty"];
  repeated string optional_placement_tags = 7 [(gogoproto.jsontag) = "optional_placement_tags,omitempty"];
  string rep_url = 8;
}

message Provider {
  string name = 1;
  repeated string properties = 2 [(gogoproto.jsontag) = "properties,omitempty"];
}

message CellsResponse {
  Error error = 1;
  repeated CellPresence cells = 2;
}
